# workshop_data_quality

./: main.py  pyproject.toml  reminder.txt
.github/workflows/: CI.yml
app/: etl.py  etl_infer_schema.py  funcao.py  prod_schema.py
tests/: funcao_ola.py  test_funcao_ola.py
