[project]
name = "workshop-data-quality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandera[io]>=0.26.1",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.44",
]

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python app/main.py
"""
doc = "mkdocs serve"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "taskipy>=1.14.1",
]
